[gd_scene load_steps=2 format=3 uid="uid://cvbstpvqle7xj"]

[ext_resource type="Script" path="res://scripts/systems/economy_system.gd" id="1_0x0x0"]

[node name="EconomySystem" type="Node"]
script = ExtResource("1_0x0x0")

[node name="TransactionHistory" type="Node" parent="."]

[node name="EconomyStats" type="Node" parent="."] 